--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,14 @@
         "f:\\javafx-19-sdk\\lib\\javafx.media.jar",
         "f:\\javafx-19-sdk\\lib\\javafx.swing.jar",
         "f:\\javafx-19-sdk\\lib\\javafx.web.jar",
-        "f:\\javafx-19-sdk\\lib\\javafx-swt.jar"
+        "f:\\javafx-19-sdk\\lib\\javafx-swt.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx-swt.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.base.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.controls.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.fxml.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.graphics.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.media.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.swing.jar",
+        "/Users/kartik/Downloads/javafx-sdk-19/lib/javafx.web.jar"
     ]
 }
